--- a/assets/css/mobile-style.css
+++ b/assets/css/mobile-style.css
@@ -12,14 +12,17 @@
     flex-direction: column;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 
 /* HEADER */
 
 header {
     flex-wrap: wrap;
     height: 100px;
-    padding-top: 20px;
-    margin: 0;
+    margin: 20px 0px 0px 0px;
 }
 
 header #logo {
@@ -34,7 +37,7 @@ header #logo {
     width: 20%;
     align-items: flex-end;
     order: 2;
-    padding-right: 5.3%;
+    margin-right: 20px;
 }
 
 header nav {
@@ -196,11 +199,11 @@ header nav ul li {
 }
 
 .accomodation_picture img {
-    width: 325px;
+    width: 314px;
 }
 
 .accomodation_picture {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 
 .accomodations_section h2 {
@@ -214,6 +217,15 @@ header nav ul li {
 
 
 /* ACTIVITIES SECTION */
+
+.first_activity-height,
+.second_activity-height,
+.third_activity-height,
+.fourth_activity-height,
+.fifth_activity-height,
+.sixth_activity-height {
+    height: 190px;
+}
 
 .activity_picture img {
     width: 324px;
@@ -236,8 +248,11 @@ header nav ul li {
 
 .activities_section h2 {
     margin-bottom: 30px;
-    align-self: flex-start;
-    margin-left: 8%;
+    padding-left: 4%;
+}
+
+.activities_in_city article {
+    margin: 0px 0px 24px 0px;
 }
 
 
